# machine-unlearning

./: .gitignore  pyproject.toml
cnn-unlearning/: gradient_ascent_mnist.ipynb  kl_bad_teacher_mnist.ipynb  pyproject.toml  scrub_mnist.ipynb
cnn-unlearning/utils/: eval.py  loss.py  model.py
llm-unlearning/: .env.example  .gitignore  pyproject.toml  unlearning_finetune_trl.ipynb  unlearning_finetune_trl_eval.ipynb  unlearning_gradient_ascent_trl.ipynb  unlearning_gradient_difference_trl.ipynb  unlearning_kl_difference_trl.ipynb
llm-unlearning/eval_utils/: __init__.py  config.py  llm.py  models.py  prompt.py  static.py
