[project]
name = "machine-unlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "poethepoet>=0.46.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.uv.workspace]
members = [
    "cnn-unlearning",
    "llm-unlearning",
]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
sync = "uv sync --all-packages --all-groups"

