[project]
name = "llm-unlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "numpy>=2.4.6",
    "peft>=0.19.1",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.10.1",
    "flash-attn>=2.8.3",
    "bitsandbytes>=0.49.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "python-dotenv>=1.2.2",
    "pandas>=3.0.3",
    "trl>=1.5.1",
]
